# mtcli-rsi

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  make.bat  mkdocs.yml  pyproject.toml
api/: index.html
armazenamento/: index.html
desenvolvimento/: index.html
docs/: api.md  armazenamento.md  desenvolvimento.md  index.md  instalacao.md  requirements.txt  uso.md
instalacao/: index.html
mtcli_rsi/: logger.py  plugin.py  rsi.py
search/: search_index.json
tests/: test_rsi.py
uso/: index.html
