[project]
name = "mtcli-rsi"
version = "0.1.0"
description = "Plugin mtcli do indicador RSI"
authors = [
    {name = "Valmir França",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "mtcli (>=1.18.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."mtcli.plugins"]
rsi = "mtcli_rsi.rsi:rsi"
