[project]
name = "mtcli-rsi"
version = "1.0.0"
description = "Plugin mtcli do indicador RSI"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "mtcli (>=1.18.1)",
    "pandas (>=2.3.2,<3.0.0)"
]

[project.urls]
repository = "https://github.com/vfranca/mtcli-rsi"
documentation = "https://vfranca.github.io/mtcli-rsi"
homepage = "https://github.com/vfranca/mtcli-rsi"
issues = "https://github.com/vfranca/mtcli-rsi/issues"

[project.entry-points."mtcli.plugins"]
rsi = "mtcli_rsi.rsi:rsi"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
