[project]
name = "mtcli-rsi"
version = "1.0.1"
description = "Plugin mtcli do indicador RSI"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "mtcli (>=1.18.1)",
    "pandas (>=2.3.2,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-rsi"
documentation = "https://mtcli-rsi.readthedocs.io"
repository = "https://github.com/vfranca/mtcli-rsi"
issues = "https://github.com/vfranca/mtcli-rsi/issues"

[project.entry-points."mtcli.plugins"]
mtcli-rsi = "mtcli_rsi.plugin:rsi"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
pytest-cov = "^7.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
